Improved security in deleteFile methods